--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 26
@@ -10,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -19,10 +21,20 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //MATERAIL-DESIGN
+    def materialDesignVersion = '26.1.0'
+    implementation "com.android.support:appcompat-v7:$materialDesignVersion"
+    implementation "com.android.support:design:$materialDesignVersion"
+    implementation "com.android.support:cardview-v7:$materialDesignVersion"
+    implementation "com.android.support:recyclerview-v7:$materialDesignVersion"
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //GREEN-DAO
+    compile 'org.greenrobot:greendao:3.2.2'
+    compile 'org.greenrobot:greendao-generator:3.2.0'
+
+    //TESTS
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
