--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,16 @@ dependencies {
     implementation "com.android.support:design:$materialDesignVersion"
     implementation "com.android.support:cardview-v7:$materialDesignVersion"
     implementation "com.android.support:recyclerview-v7:$materialDesignVersion"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //BUTTER-KNIFE
+    def butterKnifeVersion = '9.0.0-SNAPSHOT'
+    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
     //GREEN-DAO
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile 'org.greenrobot:greendao-generator:3.2.0'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao-generator:3.2.0'
 
     //TESTS
     testImplementation 'junit:junit:4.12'
